# Svarog

./: .gitignore  Dockerfile  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac  cpu-miner.c  example-cfg.json  miner.h  minerd.1  sha2-arm.S  sha2-ppc.S  sha2-x64.S  sha2-x86.S  sha2.c  svarog.c  util.c  vcrypt-arm.S  vcrypt-ppc.S  vcrypt-x64.S  vcrypt-x86.S  vcrypt.c
doc/: FAQ.md
